Implementación completa: auditoría, historias médicas, Docker y correcciones